# sei-chain

./: go.mod  go.sum  initialize_local_chain.sh
app/: app.go  const.go  eth_replay.go  invariance.go  receipt.go  receipt_test.go  test_state_store.go  upgrades.go
app/params/: config.go
cmd/seid/cmd/: root.go
contracts/test/: EVMCompatabilityTest.js  lib.js  scenarios.js
contracts/wasm/: cw20_bank.wasm
evmrpc/: block.go  block_test.go  filter.go  info.go  net.go  send.go  setup_test.go  simulate.go  state.go  subscribe.go  tracers.go  tx.go  txpool.go  utils.go  web3.go
evmrpc/tests/: mock_accounts.go
example/cosmwasm/cw20-bank/: Cargo.toml
example/cosmwasm/cw20-bank/src/: contract.rs  error.rs  msg.rs  state.rs
example/cosmwasm/cw721/: Cargo.toml
example/cosmwasm/cw721/src/: contract.rs  msg.rs
oracle/price-feeder/dockerfile/: README.md
oracle/price-feeder/oracle/: oracle.go
oracle/price-feeder/oracle/client/: client.go
precompiles/bank/: bank.go
precompiles/common/: precompiles.go
precompiles/common/legacy/v552/: precompiles.go
precompiles/common/legacy/v555/: precompiles.go
precompiles/pointer/: pointer.go
proto/confidentialtransfers/: tx.proto
proto/evm/: params.proto
tools/hash_verification/pebbledb/: scanner.go
tools/migration/sc/: migrator.go
tools/migration/ss/: migrator.go
x/confidentialtransfers/types/: msgs_test.go  tx.pb.go
x/evm/: module.go
x/evm/config/: config.go
x/evm/keeper/: keeper.go  msg_server.go  params.go  receipt.go  replay.go
x/evm/types/: params.go  params.pb.go
x/oracle/utils/: assets.go
(+11 files in other folders)
