[package]
name = "cw20-bank"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cw-storage-plus = "0.15.1"
cw2 = "0.15.1"
cw20 = "0.15.1"
schemars = "0.8.11"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.37"

[dev-dependencies]
cw-multi-test = "0.15.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
